ola-parser/src/testdata/syntaxTests/nameAndTypeResolution/227_library_having_variables.sol
library Lib {
    u256 x;
}
// ----
// TypeError 9957: (14-20): Library cannot have non-constant state variables
